--- a/pages/property.html
+++ b/pages/property.html
@@ -17,8 +17,8 @@
 		<div class="mui-content property_main">
 			<!--无-->
 			<div class="property_card blue_bg" id="creat_dcar">
-				<span url="/property/create-wallet.html" id="createDcar">新建DCAR</span>
-				<span class="newact" url="/property/import-dcar.html">导入DCAR</span>
+				<span url="/property/create-wallet.html" id="createDcar">新建DCAR钱包</span>
+				<span class="newact" url="/property/import-dcar.html">导入DCAR钱包</span>
 			</div>
 			<div id="dcar_purse"></div>
 			<div class="property_card black_bg" id="import_eth" onclick="import_wallet('ETH')">
