--- a/users/barcodeAddress.html
+++ b/users/barcodeAddress.html
@@ -88,7 +88,8 @@
 			function scanPicture() {
 				plus.gallery.pick(function(path) {
 					plus.barcode.scan(path, onmarked, function(error) {
-						// plus.nativeUI.alert('无法识别此图片');
+						plus.nativeUI.alert(error);
+						plus.nativeUI.alert('无法识别此图片');
 					});
 				}, function(err) {
 					console.log('Failed: ' + err.message);
