--- a/users/addOre.html
+++ b/users/addOre.html
@@ -111,7 +111,7 @@
 					mui.showLoading("加载中...", "div");
 					$.ajax({
 						type: "post",
-						url: api + "miners/bind/account",
+						url: api + "miners/account",
 						data: {
 							uuid: uuid,
 							mnemonic: choiseItem[0].value,
