--- a/users/binders.html
+++ b/users/binders.html
@@ -68,7 +68,7 @@
 				mui.showLoading("绑定中...", "div");
 				$.ajax({
 					type: "post",
-					url: api + "miners/bind/user",
+					url: api + "miners/owner",
 					data: {
 						uuid: result
 					},
