--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -60,6 +60,7 @@
 					});
 				}
 			})
+			alert(navigator.userAgent.toLowerCase());
 			// 复制地址 
 			$(document).ready(function(){
 				var fooText=$("#addressBox").val();
